--- a/homework1/pom.xml
+++ b/homework1/pom.xml
@@ -14,6 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <java.bootstrap.classes>${java.home}/lib/rt.jar</java.bootstrap.classes>
   </properties>
 
   <dependencies>
@@ -51,7 +52,43 @@
                     </archive>
                 </configuration>
             </plugin>
-            
+            <plugin>
+        <groupId>com.github.wvengen</groupId>
+        <artifactId>proguard-maven-plugin</artifactId>
+        <version>2.0.14</version>
+        <configuration>
+          <includeDependency>false</includeDependency>
+          <injar>${project.build.finalName}.${project.packaging}</injar>
+          <outjar>${project.build.finalName}-proguard.${project.packaging}</outjar>
+          <libs>
+            <lib>${java.bootstrap.classes}</lib>
+          </libs>
+          <options>
+          	<option>-dontwarn</option>
+            <option>-keepclasseswithmembers public class * { public static void main(java.lang.String[]); }</option>
+            <option>-keepattributes Signature</option>
+            <option>-keepattributes *Annotation*</option>
+            <option>-keepattributes InnerClasses,EnclosingMethod</option>
+          </options>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>net.sf.proguard</groupId>
+            <artifactId>proguard-base</artifactId>
+            <version>5.3.3</version>
+            <scope>runtime</scope>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <id>proguard</id>
+            <phase>package</phase>
+            <goals>
+              <goal>proguard</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
   	</plugins>
   </build>
 </project>
