--- a/homework12/pom.xml
+++ b/homework12/pom.xml
@@ -37,6 +37,11 @@
         <artifactId>mysql-connector-java</artifactId>
         <version>6.0.6</version>
     </dependency>
+    <dependency>
+  <groupId>org.freemarker</groupId>
+  <artifactId>freemarker</artifactId>
+  <version>2.3.27-incubating</version>
+</dependency>
 	
   </dependencies>
   <build>
