--- a/homework16/pom.xml
+++ b/homework16/pom.xml
@@ -49,6 +49,11 @@
     		<version>${spring.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
     		<groupId>org.hibernate</groupId>
     		<artifactId>hibernate-entitymanager</artifactId>
     		<version>5.2.13.Final</version>
@@ -74,12 +79,27 @@
   			<artifactId>freemarker</artifactId>
   			<version>2.3.27-incubating</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.eclipse.jetty</groupId>
+    		<artifactId>jetty-server</artifactId>
+    		<version>9.4.8.v20171121</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.eclipse.jetty</groupId>
+    		<artifactId>jetty-servlet</artifactId>
+    		<version>9.4.8.v20171121</version>
+		</dependency>
+		<dependency>
+      		<groupId>org.eclipse.jetty.websocket</groupId>
+      		<artifactId>javax-websocket-server-impl</artifactId>
+      		<version>9.4.8.v20171121</version>
+    	</dependency>
   
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+    	<dependency>
+      		<groupId>junit</groupId>
+      		<artifactId>junit</artifactId>
+      		<version>3.8.1</version>
+      		<scope>test</scope>
+    	</dependency>
   </dependencies>
 </project>
