--- a/homework16/pom.xml
+++ b/homework16/pom.xml
@@ -62,7 +62,6 @@
     		<groupId>javax.websocket</groupId>
     		<artifactId>javax.websocket-api</artifactId>
     		<version>1.1</version>
-    		<scope>provided</scope>
 		</dependency>
 		<dependency>
     		<groupId>com.google.code.gson</groupId>
@@ -102,4 +101,35 @@
       		<scope>test</scope>
     	</dependency>
   </dependencies>
+  <build>
+  	<finalName>${project.name}</finalName>
+  	<plugins>
+  		<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>my-maven-assembly-plugin</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>ru.podelochki.otus.homework16.MessageProcess</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            
+  	</plugins>
+  </build>
 </project>
